--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,13 +5,11 @@ Version: 1.01
 Date: 2016-11-01
 Author: Laurent Briollais, Jingxiong Xu 
 Maintainer: Apostolos Dimitromanolakis <apostol@cs.toronto.edu>
-Description: Bayes factor models for bayesian analysis
+Description: Bayes factor models for rare variant analysis.
 License: GPL (>= 2)
 Depends:
     R (>= 2.15.2),
     stats,
-    LearnBayes
-Imports:
     LearnBayes
 Encoding: latin1
 NeedsCompilation: no
