--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
-Package: BF
+Package: rareBF
 Type: Package
 Title: Bayesian Models for Rare Variant Association Analysis
-Version: 1.03
+Version: 1.04
 Date: 2016-11-01
 Author: Laurent Briollais, Jingxiong Xu 
 Maintainer: Apostolos Dimitromanolakis <apostol@cs.toronto.edu>
